--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
   </head>
   <body>
     <!-- Your code here -->
+    <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg
+    " alt="">
+
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.youtube.com%2Fwatch%3Fv%3D80s0qZ2mD5Y&psig=AOvVaw1Ti17lE-bpA9hsSZMDb-5C&ust=1706875523104000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCNCK_d2MioQDFQAAAAAdAAAAABAR" 
+    alt="friends">
+    
+    <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fcoub.com%2Fview%2F4ky9w&psig=AOvVaw1Ti17lE-bpA9hsSZMDb-5C&ust=1706875523104000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCNCK_d2MioQDFQAAAAAdAAAAABAE" 
+    alt="tommy"
+    title="howdy">
   </body>
 </html>
